...
        .clipShape(RoundedRectangle(cornerRadius: 10))
    }
    
    private func dateToString(_ date:Date) -> String {
        let formatter = DateFormatter()
        formatter.dateFormat = "yyyy MMMM dd, EEEE"
        formatter.locale = Locale(identifier: "ko")

        return formatter.string(from: date)
    }
}

#Preview {
...
